# soul

./: LICENSE  Makefile.am  README  configure.ac  soul-wizard  soul.conf.example
src/: soul.c
